--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12923,6 +12923,8 @@ Samsung:
       model: 'Galaxy S21+ 5G'
     - regex: '(?:SAMSUNG-)?SM-F700(?:[0FNUW]|U1)|SCV47'
       model: 'Galaxy Z Flip'
+    - regex: '(?:SAMSUNG-)?SM-F707(?:U1|[0BNUW])'
+      model: 'Galaxy Z Flip 5G'
     - regex: '(?:SAMSUNG-)?SCH-I200'
       model: 'Galaxy Stellar'
     - regex: '(?:SAMSUNG-)?SCH-I829'
