--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12953,6 +12953,8 @@ Samsung:
       model: 'Galaxy A3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A320(?:FL|[FYX])'
       model: 'Galaxy A3 (2017)'
+    - regex: '(?:SAMSUNG-)?SM-A430F'
+      model: 'Galaxy A4'
     - regex: '(?:SAMSUNG-)?SM-A500[LSWY9]?(?:[);/ ]|$)'
       model: 'Galaxy A5'
     - regex: '(?:SAMSUNG-)?SM-A500[FGHKM0]'
