--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13047,7 +13047,7 @@ Samsung:
       model: 'Galaxy A50s'
     - regex: '(?:SAMSUNG-)?SM-A507FN'
       model: 'Galaxy A50s'
-    - regex: '(?:SAMSUNG-)?SM-A515[FU]'
+    - regex: '(?:SAMSUNG-)?SM-(?:A515[FUW]|S515DL)'
       model: 'Galaxy A51'
     - regex: '(?:SAMSUNG-)?SCG07'
       model: 'Galaxy A51 5G'
