--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12324,7 +12324,7 @@ Soundmax:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple (?!III)|SC-(?:02[CHMKJG]|03[JLK]|04[ELJ]|05G|52A|53A|54A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-8]|SCV3[1-9]|40[34]SC|SCL2[234]|SCG0[1-7]|SCT21'
+  regex: 'SAMSUNG(?! ?Browser)|Maple (?!III)|SC-(?:01[HFGLKM]|02[CHMKJG]|03[JLK]|04[ELJ]|05G||41A|52A|53A|54A)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-8]|SCV3[1-9]|40[34]SC|SCL2[234]|SCG0[1-7]|SCT21'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -13039,7 +13039,7 @@ Samsung:
       model: 'Galaxy A40'
     - regex: '(?:SAMSUNG-)?SM-A305[018](?:[);/ ]|$)'
       model: 'Galaxy A40s'
-    - regex: '(?:SAMSUNG-)?(?:SM-A415F|SCV48)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?(?:SM-A415F|SC-41A|SCV48)(?:[);/ ]|$)'
       model: 'Galaxy A41'
     - regex: '(?:SAMSUNG-)?SM-A426[0BN](?:[);/ ]|$)'
       model: 'Galaxy A42 5G'
