--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12324,7 +12324,7 @@ Soundmax:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple (?!III)|SC-(?:01[FGHKLM]|02[CGHJKLM]|03[JKL]|04[EJL]|05[GL]|41A|52A|53A|54A)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-8]|SCV3[1-9]|40[34]SC|SCL2[234]|SCG0[1-7]|SCT21'
+  regex: 'SAMSUNG(?! ?Browser)|Maple (?!III)|SC-(?:01[FGHKLM]|02[CGHJKLM]|03[JKL]|04[EJL]|05[GL]|41A|42A|52A|53A|54A)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-8]|SCV3[1-9]|40[34]SC|SCL2[234]|SCG0[1-7]|SCT21'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -13021,7 +13021,7 @@ Samsung:
       model: 'Galaxy A12'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:U1|YN|[FGSWU])|S205DL)|SC-02M|SCV46'
       model: 'Galaxy A20'
-    - regex: '(?:SAMSUNG-)?SM-A215(?:DL|U1|[UW])(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?(?:SM-A215(?:DL|U1|[UW])|SC-42A)(?:[);/ ]|$)'
       model: 'Galaxy A21'
     - regex: '(?:SAMSUNG-)?SM-A217[FMN](?:[);/ ]|$)'
       model: 'Galaxy A21s'
