--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13063,6 +13063,8 @@ Samsung:
       model: 'Galaxy A80'
     - regex: '(?:SAMSUNG-)?SM-A908[BN]'
       model: 'Galaxy A90'
+    - regex: '(?:SAMSUNG-)?SM-A9080'
+      model: 'Galaxy A90 5G'
     - regex: '(?:SAMSUNG-)?GT-I9301I'
       model: 'Galaxy S III Neo'
     - regex: '(?:SAMSUNG-)?SM-S120VL(?:[);/ ]|$)'
