--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12471,6 +12471,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T860(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.5" WiFi'
+    - regex: '(?:SAMSUNG-)?SM-T866N(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab S6 10.5" 5G'
     - regex: '(?:SAMSUNG-)?SM-T111[M]?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab 3 7.0" Lite'
