--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11646,3 +11646,21 @@
     model: Galaxy A9
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Mozilla/5.0 Linux; U; Android 9.0; SM-A8s Build/LMY47I AppleWebKit/534.30 KHTML, like Gecko Version/4.0 UCBrowser/12.12.0.1187 U3/0.8.0 Mobile Safari/534.30
+  os:
+    name: Android
+    version: "9.0"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 12.12.0.1187
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A8s
+  os_family: Android
+  browser_family: Unknown
