--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9383,3 +9383,39 @@
     model: Galaxy Tab Active 2 8.0"
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; SM-T395C Build/NMF26X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 64.0.3282.137
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab Active 2 8.0"
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; SM-T395N Build/NMF26X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 64.0.3282.137
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab Active 2 8.0"
+  os_family: Android
+  browser_family: Chrome
