--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12639,7 +12639,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T360(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T39[057][U]?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T390|T395[CN]?|T397U)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 2 8.0"'
     - regex: '(?:SAMSUNG-)?SM-(?:P902|P907A)(?:[);/ ]|$)'
