--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12642,6 +12642,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T390|T395[CN]?|T397U)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 2 8.0"'
+    - regex: '(?:SAMSUNG-)?SM-(?:T575N?|T577U?)(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab Active 3 8.0"'
     - regex: '(?:SAMSUNG-)?SM-(?:P902|P907A)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Note Pro 12.2"'
