--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12579,6 +12579,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T870(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S7 11.0" WiFi'
+    - regex: '(?:SAMSUNG-)?SM-T878U(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab S7 11.0" 5G'
     - regex: '(?:SAMSUNG-)?SM-T900'
       device: 'tablet'
       model: 'Galaxy TabPRO 12.2" WiFi'
