--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12462,7 +12462,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T867[V]?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.5" LTE'
-    - regex: '(?:SAMSUNG-)?SM-P615[CN]?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:P615[CN]?|P617)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.4" Lite'
     - regex: '(?:SAMSUNG-)?SM-P610(?:[);/ ]|$)'
