--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13198,7 +13198,7 @@ Samsung:
       model: 'Galaxy M01s'
     - regex: '(?:SAMSUNG-)?SM-M025F'
       model: 'Galaxy M02s'
-    - regex: '(?:SAMSUNG-)?SM-M105[FGM]'
+    - regex: '(?:SAMSUNG-)?SM-M105[FGMY]'
       model: 'Galaxy M10'
     - regex: '(?:SAMSUNG-)?SM-M107F'
       model: 'Galaxy M10s'
