--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13090,7 +13090,7 @@ Samsung:
       model: 'Galaxy J1 Mini'
     - regex: '(?:SAMSUNG-)?SM-J106[BFHM]'
       model: 'Galaxy J1 mini Prime'
-    - regex: '(?:SAMSUNG-)?SM-(?:J120(?:ZN|[AFGHMTW])|J05H)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J120(?:ZN|[AFGHMPTW])|J05H)'
       model: 'Galaxy J1 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J110[FGHLM]|J111[FM])'
       model: 'Galaxy J1 Ace'
