--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -12096,3 +12096,21 @@
     model: Galaxy M20
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 9.0; SM-M30 Build/LMY47I) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.0.0 Mobile Safari/537.36 YaApp_Android/10.20 YaSearchBrowser/10.20
+  os:
+    name: Android
+    version: "9.0"
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: "10.20"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy M30
+  os_family: Android
+  browser_family: Unknown
