--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3143,3 +3143,11 @@
     version: "47.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) qutebrowser/1.13.1 QtWebEngine/5.14.2 Chrome/77.0.3865.129 Safari/537.36
+  client:
+    type: browser
+    name: Qutebrowser
+    version: 1.13.1
+    engine: Blink
+    engine_version: ""
