--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# qutebrowser (https://qutebrowser.org/)
+- regex: 'qutebrowser/(\d+[\.\d]+)'
+  name: 'qutebrowser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # BriskBard (https://www.briskbard.com/)
 - regex: Chrome.+BriskBard/(\d+[\.\d]+)
   name: 'BriskBard'
