--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -1571,8 +1571,8 @@
   user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/538.1 (KHTML, like Gecko) qutebrowser/0.2.1 Safari/538.1
   client:
     type: browser
-    name: Qutebrowser
-    version: "0.2.1"
+    name: qutebrowser
+    version: 0.2.1
     engine: WebKit
     engine_version: "538.1"
 - 
@@ -3141,5 +3141,13 @@
     type: browser
     name: Coc Coc
     version: "47.0"
+    engine: Blink
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) qutebrowser/1.13.1 QtWebEngine/5.14.2 Chrome/77.0.3865.129 Safari/537.36
+  client:
+    type: browser
+    name: qutebrowser
+    version: 1.13.1
     engine: Blink
     engine_version: ""
