--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,16 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Qutebrowser (https://qutebrowser.org/)
+- regex: 'qutebrowser/(\d+[\.\d]+).+Chrome'
+  name: 'qutebrowser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+- regex: 'qutebrowser(?:/(\d+[\.\d]+))?'
+  name: 'qutebrowser'
+  version: '$1'
+
 # BriskBard (https://www.briskbard.com/)
 - regex: Chrome.+BriskBard/(\d+[\.\d]+)
   name: 'BriskBard'
@@ -1969,11 +1979,6 @@
 #Coast
 - regex: 'Coast(?:/(\d+[\.\d]+))?'
   name: 'Coast'
-  version: '$1'
-
-#Qutebrowser
-- regex: 'qutebrowser(?:/(\d+[\.\d]+))?'
-  name: 'Qutebrowser'
   version: '$1'
 
 # surf (https://surf.suckless.org/)
