--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -532,7 +532,7 @@
   name: 'iOS'
   version: '3.1'
 
-- regex: '(?:CPU OS|iPh(?:one)?[ _]OS|iOS)[ _/](\d+(?:[_\.]\d+)*)'
+- regex: '(?:CPU OS|iPh(?:one)?[ _]OS|iOS|iPhone)[ _/](\d+(?:[_\.]\d+)*)'
   name: 'iOS'
   version: '$1'
 
