--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -541,7 +541,11 @@
   name: 'iOS'
   version: '3.1'
 
-- regex: '(?:CPU OS|iPh(?:one)?[ _]OS|iOS|iPhone)[ _/](\d+(?:[_\.]\d+)*)'
+- regex: 'iPhone/(\d+[\.\d]*)'
+  name: 'iOS'
+  version: '$1'
+
+- regex: '(?:CPU OS|iPh(?:one)?[ _]OS|iOS)[ _/](\d+(?:[_\.]\d+)*)'
   name: 'iOS'
   version: '$1'
 
