--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11553,7 +11553,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: Galaxy Feel
+    model: Galaxy Feel 2
   os_family: Android
   browser_family: Android Browser
 - 
