--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Lolifox
+- regex: 'Lolifox/(\d+[\.\d]+)'
+  name: 'Lolifox'
+  version: '$1'
+
 # Qutebrowser (https://qutebrowser.org/)
 - regex: 'qutebrowser/(\d+[\.\d]+).+Chrome'
   name: 'Qutebrowser'
